--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+        <h1>大見出し</h1>
+        <h2>中見出し</h2>
+        <h3>小見出し</h3>
+        <p>こんにちは！<br>こんにちは！</p>
         <p>こんにちは！</p>
+        <hr>
+        <p>こんにちは！</p>
+        <p>こんにちは！</p>
+        <p><strong>こんにちは！</strong></p>
     </body>
 <html>
+
