--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <p>こんにちは！</p>
         <p>こんにちは！</p>
         <p><strong>こんにちは！</strong></p>
+	<ul><!-- Unorderd List-->
+		<li>Apple</li><!-- List Item-->
+		<li>Banana</li>
+	</ul>
+	<ol><!-- Orderd List-->
+		<li>Apple</li>
+		<li>Banana</li>
+	</ol>
     </body>
 <html>
 
