やっぱり今日が第6回？

--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+	<!-- 
+	tr: table row (行)
+	th: table header
+	td: table data
+ 	-->
+	<table>
+		<thead>
+			<tr><th>name</th><th>2010</th><th>2011</th></tr>
+		</thead>
+		<tbody>
+			<tr><td>@taguchi</td><td>200</td><td>210</td></tr>
+			<tr><td>@fkoji</td><td>300</td><td>420</td></tr>
+			<tr><td>@dotinstall</td><td>500</td><td>380</td></tr>
+		</tbody>
+	</table>
         <h1>大見出し</h1>
         <h2>中見出し</h2>
         <h3>小見出し</h3>
@@ -30,4 +45,3 @@
 	</ol>
     </body>
 <html>
-
