--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+	<p>こんにちは。</p>
+	<p><a href="http://google.com" target="_blank">Google</a></p>
+	<p><a href="hello.html" target="_blank">Hello</a></p>
+	<p><a href="#hello2">hello2</a></p>
 	<!-- 
 	tr: table row (行)
 	th: table header
@@ -43,5 +47,20 @@
 		<li>Apple</li>
 		<li>Banana</li>
 	</ol>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p id="hello2">hello 2 !!</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
+	<p>こんにちは。</p>
     </body>
 <html>
