--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+	<img src="kiku.jpg" width="500" height="283" alt="菊の写真です" title="菊の写真">
 	<p>こんにちは。</p>
 	<p><a href="http://google.com" target="_blank">Google</a></p>
 	<p><a href="hello.html" target="_blank">Hello</a></p>
