--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <link rel="shortcut icon" href="favicon.ico">
     </head>
     <body>
+	<form action="survey.php" method="post">
+		<p>名前：<input type="text" name="name" size="60" maxlength="5"></p>
+		<p>メモ：<textarea name="name"></textarea></p>
+		<p>名前：<input type="submit" value="送信!"></p>
+	</form>
 	<img src="kiku.jpg" width="500" height="283" alt="菊の写真です" title="菊の写真">
 	<p>こんにちは。</p>
 	<p><a href="http://google.com" target="_blank">Google</a></p>
