--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     </head>
     <body>
 	<form action="survey.php" method="post">
+		Colors:
+		<label><input type="radio" name="color" value="red">Red</label>
+		<input type="radio" name="color" value="blue" id="blue"><label for="blue">Blue</label>
+		<input type="radio" name="color" value="green">Green
+	</form>
+	<form action="survey.php" method="post">
+		Colors:
+		<input type="checkbox" name="color" value="red">Red
+		<input type="checkbox" name="color" value="blue">Blue
+		<input type="checkbox" name="color" value="green">Green
+	</form>
+	<form action="survey.php" method="post">
 		<p>名前：<input type="text" name="name" size="60" maxlength="5"></p>
 		<p>メモ：<textarea name="memo"></textarea></p>
 		<p><input type="submit" value="送信!"></p>
