--- a/index.html
+++ b/index.html
@@ -16,6 +16,43 @@
 	div: 汎用ブロック要素（前後に改行が入る）
 	span: 汎用インライン要素（前後に改行が入らない）
 
+	構造的
+	header
+	footer
+	nav
+	article
+	aside
+	section
+
+	-->
+
+	<header>
+		<h1>起業日記</h1>
+		<nav>
+			home
+			profile
+		</nav>
+	</header>
+
+	<article>
+		<h2>リリース完了</h2>
+		<p>うれしい！</p>
+	</article>
+
+	<aside>
+		<h3>このサイトについて</h3>
+		<p>@taguchiの起業日記です。</p>
+	</aside>
+
+	<footer>
+		copyright 2013 @taguchi
+	</footer>
+
+	<!--
+	スタイリング
+	div: 汎用ブロック要素（前後に改行が入る）
+	span: 汎用インライン要素（前後に改行が入らない）
+
 	id: その文書に一つだけの要素
 	class: 複数あってもよい
 	-->
