--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     </head>
     <body>
 	<!--
+	実体参照
+	style属性
+	script
+	-->
+	<p>これは&lt;p&gt;です。</p>
+	<p style="color:blue;">こんにちは！</p>
+
+	<!--
+	本来 script タグは 読み込みの際にページの読み込みが止まってしますので
+	body タグの閉じタグの直前に書くのが一般的
+	-->
+	<script src="myscript.js"></script>
+
+	<!--
 	スタイリング
 	div: 汎用ブロック要素（前後に改行が入る）
 	span: 汎用インライン要素（前後に改行が入らない）
