--- a/css/index.html
+++ b/css/index.html
@@ -5,5 +5,33 @@
 	<title>CSSの練習</title>
 </head>
 <body>
+	<!--
+	セレクタ {
+		プロパティ: 値;
+		プロパティ: 値;
+		プロパティ: 値;
+
+	h1 {
+		/* コメント */
+		color: red;
+	}
+
+	要素 h1 p ul
+	id #main
+	class .item
+	-->
+	<section id="main">
+		<h1>見出し</h1>
+		<p class="item">こんにちは！</p>
+	</section>
+	<section id="sub">
+		<h2>見出し</h2>
+		<p>こんにちは！</p>
+		<ul>
+			<li>item 1</li>
+			<li class="item">item 2</li>
+			<li>item 3</li>
+		</ul>
+	</section>
 </body>
 </html>
