--- a/css/index.html
+++ b/css/index.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charaset="utf=8">
 	<title>CSSの練習</title>
+	<style>
+		h1 { color: red; }
+	</style>
+	<link rel="stylesheet" href="default.css">
 </head>
 <body>
 	<!--
@@ -19,6 +23,11 @@
 	要素 h1 p ul
 	id #main
 	class .item
+
+	- styleタグ
+	- インライン
+	- 外部ファイル
+
 	-->
 	<section id="main">
 		<h1>見出し</h1>
@@ -26,7 +35,7 @@
 	</section>
 	<section id="sub">
 		<h2>見出し</h2>
-		<p>こんにちは！</p>
+		<p style="color: green;">こんにちは！</p>
 		<ul>
 			<li>item 1</li>
 			<li class="item">item 2</li>
