--- a/css/index.html
+++ b/css/index.html
@@ -1,5 +1,3 @@
-<!-- セレクタの優先度について -->
-
 <!DOCTYPE html
 <html lang="ja">
 <head>
@@ -7,18 +5,13 @@
 	<title>CSSの練習</title>
 	<style>
 		/*
-			- 後から書いた方が優先
-			- インラインで書いたほうが優先
-			- 詳細度の高い方が優先
-			- !important が最優先
-
-			#(100)
-			.(10)
-			要素(1)
+			- 名前 red blue purple
+			- r(ed)/g(reen)/b(lue) 0-255 rgb(0, 255, 0)
+			- 16進数 #00f #ff0000
 		*/
-		h1 { color: green !important; }			/* 1 */
-		#main h1 { color: red; }		/* 100 + 1 */
-		section#main h1 { color: yellow; }	/* 1 + 100 + 1 */
+		/* h1 { color: red; }  名前で指定 */
+		/* h1 { color: rgb(125, 255, 80); } */
+		h1 { color: #ff0000; }
 	</style>
 </head>
 <body>
@@ -37,3 +30,4 @@
 	</section>
 </body>
 </html>
+
