第７回 テキストのスタイル指定

--- a/css/index.html
+++ b/css/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html
 <html lang="ja">
 <head>
-	<meta charaset="utf=8">
-	<title>CSSの練習</title>
-	<style>
-		/*
-			- 名前 red blue purple
-			- r(ed)/g(reen)/b(lue) 0-255 rgb(0, 255, 0)
-			- 16進数 #00f #ff0000
-		*/
-		/* h1 { color: red; }  名前で指定 */
-		/* h1 { color: rgb(125, 255, 80); } */
-		h1 { color: #ff0000; }
-	</style>
+    <meta charaset="utf=8">
+    <title>CSSの練習</title>
+    <style>
+        p {
+            color: gray;
+            font-weight: bold;    /* normal */
+            font-size: 20px;
+            text-align: center;    /* left, right */
+            text-decoration: line-through;
+            font-family: Impact;
+            line-height: 40px;
+        }
+    </style>
 </head>
 <body>
-	<section id="main">
-		<h1>見出し</h1>
-		<p class="item">こんにちは！</p>
-	</section>
-	<section id="sub">
-		<h2>見出し</h2>
-		<p>こんにちは！</p>
-		<ul>
-			<li>item 1</li>
-			<li class="item">item 2</li>
-			<li>item 3</li>
-		</ul>
-	</section>
+    <p>こんにちは！ Hello！</p>
 </body>
 </html>
 
