--- a/css/index.html
+++ b/css/index.html
@@ -4,19 +4,49 @@
     <meta charaset="utf=8">
     <title>CSSの練習</title>
     <style>
-        p {
-            color: gray;
-            font-weight: bold;    /* normal */
-            font-size: 20px;
-            text-align: center;    /* left, right */
-            text-decoration: line-through;
-            font-family: Impact;
-            line-height: 40px;
+        body {
+            /*
+            background-color: green;
+            background-image: url('bg.png');
+            background-repeat: no-repeat;    # repeat-x => 横方向へ繰り返し, repeat-y => 縦方向へ繰り返し
+            background-position: 10px 10px;
+            background-attachment: fixed;
+            */
+            background: green url('bg.png') no-repeat;
         }
     </style>
 </head>
 <body>
-    <p>こんにちは！ Hello！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
+    <p>こんにちは！</p>
 </body>
 </html>
 
