--- a/css/index.html
+++ b/css/index.html
@@ -4,49 +4,19 @@
     <meta charaset="utf=8">
     <title>CSSの練習</title>
     <style>
-        body {
-            /*
-            background-color: green;
-            background-image: url('bg.png');
-            background-repeat: no-repeat;    # repeat-x => 横方向へ繰り返し, repeat-y => 縦方向へ繰り返し
-            background-position: 10px 10px;
-            background-attachment: fixed;
-            */
-            background: green url('bg.png') no-repeat;
+        /* Box Model */
+        body, html {
+            height: 100%;    /* %指定の場合 height については明示的に指定する必要がある。 */
+        }
+        div {
+            background: green;
+            width: 50%;    /* ピクセル指定も可能 */
+            height: 50%;
         }
     </style>
 </head>
 <body>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
-    <p>こんにちは！</p>
+    <div>Box</div>
 </body>
 </html>
 
