--- a/css/index.html
+++ b/css/index.html
@@ -13,6 +13,7 @@
             width: 100px;
             height: 100px;
             position: relative;
+            z-index: 1;
         }
         .label {
             position: absolute;
@@ -24,20 +25,61 @@
             padding: 2px 4px;
             color: white;
         }
+        div#menu {
+            position: fixed;
+            top: 0;
+            background: blue;
+            color: white;
+            width: 100%;
+            height: 50px;
+            z-index: 2;
+        }
         /*
         position
         - static
         - relative 親要素
         - absolute 子要素
         - fixed
+
+        z-index
+        - 数値が大きいほど↑
         */
     </style>
 </head>
 <body>
+    <div id="menu">Menu</div>
     <div>
         <span class="label">NEW!!</span>
         Box
     </div>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
+    <p>こんにちは。</p>
 </body>
 </html>
 
