第１８回 擬似クラスを使ってみよう

--- a/css/index.html
+++ b/css/index.html
@@ -4,14 +4,29 @@
     <meta charaset="utf=8">
     <title>CSSの練習</title>
     <style>
-        .change {
-            /* move, help, wait, pointer */
-            cursor: pointer;
-        }
+        /*
+            擬似クラス
+            :link
+            :visited
+            :hover
+            :active
+            :focus
+        */
+        a:link { color: blue; }
+        a:visited { color: gray; }
+        a:hover { font-weight: bold; }
+        a:active { background: red; }
+        h1:hover { background: orange; }
+        input:focus { background: green; }
     </style>
 </head>
 <body>
-    <p>こんにちは。こんにちは。<span class="change">こんにちは</span>。</p>
+    <h1>見出し</h1>
+    <ul>
+        <li><a href="http://dotinstall.com">Dotinstall</a></li>
+        <li><a href="http://100shiki.com">100SHIKI</a></li>
+    </ul>
+    <p><input type="text"></p>
 </body>
 </html>
 
